[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/DIGITALDREAMFAT.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/background.png" type="Texture" id=2]
[ext_resource path="res://themes/timerDigits.theme" type="Theme" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://sprites/white_cable.png" type="Texture" id=5]
[ext_resource path="res://sprites/turquoise_cable.png" type="Texture" id=6]
[ext_resource path="res://sprites/green_cable.png" type="Texture" id=7]
[ext_resource path="res://sprites/red_cable.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.792157, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.137255, 0.137255, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.47451, 0.435294, 0.435294, 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="turquoise_cable" type="Sprite" parent="background"]
position = Vector2( 758.053, -252.583 )
rotation = 0.785398
texture = ExtResource( 6 )

[node name="turquoise_cable2" type="Sprite" parent="background"]
position = Vector2( 766.062, -26 )
rotation = 0.785398
texture = ExtResource( 6 )

[node name="red_cable" type="Sprite" parent="background"]
position = Vector2( 739.366, -427.147 )
rotation = 0.785398
texture = ExtResource( 8 )

[node name="red_cable2" type="Sprite" parent="background"]
position = Vector2( 764.728, -109.456 )
rotation = 0.785398
texture = ExtResource( 8 )

[node name="green_cable" type="Sprite" parent="background"]
position = Vector2( 750.044, -337 )
rotation = 0.785398
texture = ExtResource( 7 )

[node name="green_cable2" type="Sprite" parent="background"]
position = Vector2( 755.383, -172 )
rotation = 0.785398
texture = ExtResource( 7 )

[node name="white_cable" type="Sprite" parent="background"]
position = Vector2( 739.366, -515.546 )
rotation = 0.785398
texture = ExtResource( 5 )

[node name="white_cable2" type="Sprite" parent="background"]
position = Vector2( 739.366, -515.546 )
rotation = 0.785398
texture = ExtResource( 5 )

[node name="turquoise_cable3" type="Sprite" parent="background"]
position = Vector2( -763.664, -272.605 )
rotation = -0.785398
texture = ExtResource( 6 )

[node name="turquoise_cable4" type="Sprite" parent="background"]
position = Vector2( -755.654, -46.0226 )
rotation = -0.785398
texture = ExtResource( 6 )

[node name="red_cable3" type="Sprite" parent="background"]
position = Vector2( -782.351, -447.17 )
rotation = -0.785398
texture = ExtResource( 8 )

[node name="red_cable4" type="Sprite" parent="background"]
position = Vector2( -756.989, -129.478 )
rotation = -0.785398
texture = ExtResource( 8 )

[node name="green_cable3" type="Sprite" parent="background"]
position = Vector2( -771.672, -357.023 )
rotation = -0.785398
texture = ExtResource( 7 )

[node name="green_cable4" type="Sprite" parent="background"]
position = Vector2( -766.333, -192.023 )
rotation = -0.785398
texture = ExtResource( 7 )

[node name="white_cable3" type="Sprite" parent="background"]
position = Vector2( -782.351, -535.569 )
rotation = -0.785398
texture = ExtResource( 5 )

[node name="white_cable4" type="Sprite" parent="background"]
position = Vector2( -782.351, -535.569 )
rotation = -0.785398
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 243.0
margin_top = 23.0
margin_right = 1004.0
margin_bottom = 158.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "CABLE MANAGEMENT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 267.0
margin_top = 188.0
margin_right = 985.0
margin_bottom = 334.0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_left = 267.0
margin_top = 624.0
margin_right = 985.0
margin_bottom = 702.0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
margin_left = 267.0
margin_top = 359.702
margin_right = 985.0
margin_bottom = 437.702
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="."]
margin_left = 267.0
margin_top = 465.154
margin_right = 985.0
margin_bottom = 543.154
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlayButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
